@@ -28,6 +28,7 @@ WARNING: Until version `1.0.0` there is a greater possibility of breaking change
 
 - [NEW] Module `clj-otel-adapter-log4j`, bound context aware appender and context data provider for Log4j.
 - [FIX] Prevent initialization of global OpenTelemetry instance during programmatic build of OTLP exporter.
+- [MAINT] For attribute array values, collect eagerly (vector) rather than lazily (list)
 - Bump deps
 * [MAINT] OpenTelemetry `1.56.0`, instrumentation `2.22.0`
 
